--- a/archive/templates/PWG Releases Table/doc.mw
+++ b/archive/templates/PWG Releases Table/doc.mw
@@ -3,7 +3,7 @@
 == Documentation ==
 This template inserts two tables listing PWG Schema and PWG Guide releases, each with columns for their version number, a link to the snapshot page, its release date, and changelog-style release notes.
 
-The top row in each table provides a permanent link to the latest version.
+At the top of each table, permanent and sharable short links to the latest release page, draft page, and draft talk page are included.
 
 == Usage ==
 Insert <code><nowiki>{{PWG Releases Table}}</nowiki></code> at the bottom of all pages related to the PWG Schema and PWG Guide.
