--- a/archive/templates/PWG Releases Table/template.mw
+++ b/archive/templates/PWG Releases Table/template.mw
@@ -19,8 +19,8 @@
 ! Date
 ! Changelog
 |-
-| 1.0.0
-| TBD
+| [[Foundation/Local Chapters/United States/Pedestrian Working Group/Guide/1.0.0|1.0.0]]
+| {{Date|2025-11-19|iso}}
 | • Initial release
 |-
 | [[Foundation/Local Chapters/United States/Pedestrian Working Group/Guide/1.0.0-beta|1.0.0-beta]]
@@ -45,8 +45,8 @@
 ! Date
 ! Changelog
 |-
-| 1.0.0
-| TBD
+| [[Foundation/Local Chapters/United States/Pedestrian Working Group/Schema/1.0.0|1.0.0]]
+| {{Date|2025-11-19|iso}}
 | • Initial release
 |-
 | [[Foundation/Local Chapters/United States/Pedestrian Working Group/Schema/1.0.0-beta|1.0.0-beta]]
