feat(docs-archive): update pwg releases table template

--- a/archive/templates/PWG Releases Table/template.mw
+++ b/archive/templates/PWG Releases Table/template.mw
@@ -19,6 +19,10 @@
 ! Date
 ! Changelog
 |-
+| [[Foundation/Local Chapters/United States/Pedestrian Working Group/Guide/1.0.1|1.0.1]]
+| {{Date|2026-01-30|iso}}
+| • Fix inclusion of footway tag on crossing nodes
+|-
 | [[Foundation/Local Chapters/United States/Pedestrian Working Group/Guide/1.0.0|1.0.0]]
 | {{Date|2025-11-19|iso}}
 | • Initial release
